--- a/week_9/坑路心得/坑路.md
+++ b/week_9/坑路心得/坑路.md
@@ -9,9 +9,11 @@ Traceback (most recent call last):
     image = cv2.imread(image_path)
             ^^^^^^^^^^^^^^^^^^^^^^
 TypeError: Can't convert object to 'str' for 'filename
-3.
-    Final_image = cv2.addWeighted(annotated_image,0.5,red_green_image,0.5,0)
+3. Final_image = cv2.addWeighted(annotated_image,0.5,red_green_image,0.5,0)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 cv2.error: OpenCV(4.8.1) D:\a\opencv-python\opencv-python\opencv\modules\core\src\arithm.cpp:650: error: (-209:Sizes of input arguments do not match) The operation is neither 'array op array' (where arrays have the same size and the same number of channels), nor 'array op scalar', nor 'scalar op array' in function 'cv::arithm_op'
 
 - 原因：annotated_image和red_green_image的尺寸或通道数不匹配
+# 心得
+## 难绷，每次运行都要祈祷不要报什么奇奇怪怪的错误，报错之后网上也很难答案，最后还是要靠ai解答疑惑。<p>所以最快速的解决方法是将报错复制到ai，让ai解答；之后才考虑互联网！！！
+## AI：文心一言，devv
